Fix text align

--- a/src/app/components/Gallery/Gallery.module.scss
+++ b/src/app/components/Gallery/Gallery.module.scss
@@ -195,4 +195,5 @@
 
 .lowerEndText {
   color: white !important;
+  text-align: left !important;
 }
